# elpa

./: .ci-env-vars  .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  Changelog  DEPRECATED_FEATURES  DEPRECATED_FEATURES.md  Description_of_this_repository  Doxyfile.in  INSTALL  INSTALL.md  INSTALL_FROM_GIT_VERSION  ISSUES.md  LIBRARY_INTERFACE  LICENSE  Makefile.am  Makefile.in  PERFORMANCE_TUNING.md  README  README.md  RELEASE_NOTES  SWITCHING_TO_NEW_INTERFACE.md  THIS_REPO_HAS_MOVED  USERS_GUIDE.md  USERS_GUIDE_DEPRECATED_LEGACY_API.md  aclocal.m4  after.inc.yml  autogen.sh  before.inc.yml  ci_coverage_collect  ci_coverage_summary  config.h.in  configure  configure.ac  doxygen.am  elpa.pc.in  elpa.spec  fortran_dependencies.m4  fortran_dependencies.mk  (+18 more)
COPYING/: COPYING
ELPA_2011.12/: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
ELPA_2011.12.Intrinsics/: README
ELPA_2011.12/autom4te.cache/: output.1  requests  traces.0  traces.1
ELPA_2011.12/m4/: ax_prog_cc_mpi.m4
ELPA_2011.12/src/: elpa2.f90  elpa2_kernels.f90  elpa2_kernels_bg.f90
ELPA_2011.12/test/: Makefile  test_complex.f90  test_complex2.f90  test_real.f90  test_real2.f90  test_real_gen.f90
ELPA_2013.02.BETA/: INSTALL  Makefile.in  configure.ac
ELPA_2013.08/: INSTALL  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
ELPA_2013.08/autom4te.cache/: requests  traces.3
ELPA_2013.08/src/: elpa2.F90
ELPA_2013.08/src/elpa2_kernels/: README_elpa2_kernels.txt  elpa2_kernels_real_sse-avx_2hv.c
ELPA_2013.08/test/: test_complex.f90  test_complex2.f90  test_real.f90  test_real2.f90
ELPA_2013.11/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
ELPA_2014.06/: .gitignore  INSTALL  Makefile.am  Makefile.in  RELEASE_NOTES  aclocal.m4  config.h.in  configure  configure.ac  elpa.pc.in  fdep
ELPA_2014.06/COPYING/: COPYING
ELPA_2014.06/m4/: ax_elpa_openmp.m4
ELPA_2014.06/src/: elpa1.F90  elpa2.F90
ELPA_2014.06/src/elpa2_kernels/: elpa2_kernels_asm_x86_64.s  elpa2_kernels_complex_sse-avx_1hv.cpp  elpa2_kernels_real_bgp.f90  elpa2_kernels_real_bgq.f90
ELPA_2014.06/src/ftimings/: ftimings.F90  highwater_mark.c  resident_set_size.c
ELPA_2014.06/test/: Makefile.example  print_available_elpa2_kernels.F90  read_real.F90  read_real_gen.F90  redir.c  redirect.F90  test_complex.F90  test_complex2.F90  test_complex2_choose_kernel_with_api.F90  test_complex2_default_kernel.F90  test_complex_gen.F90  test_real.F90  test_real2.F90  test_real2_choose_kernel_with_api.F90  test_real2_default_kernel.F90  test_real_gen.F90  util.F90
ELPA_2014.06/test_project/: configure.ac  fdep
ELPA_2014.06/test_project/m4/: ax_prog_fc_mpi.m4
ELPA_2014.06/test_project/src/: test_real.F90
ELPA_development_version/: README
ELPA_development_version_GPU/: .nfs000000001b0419a00002ebac  README.txt
ELPA_development_version_OpenMP/: INSTALL  Makefile.in  configure  configure.ac
ELPA_development_version_qr/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
ELPA_development_version_qr/m4/: ax_elpa_openmp.m4
ELPA_development_version_qr/src/: elpa2.F90
ELPA_development_version_qr/src/elpa2_kernels/: README_elpa2_kernels.txt  elpa2_kernels_real_sse-avx_4hv.c
ELPA_development_version_qr/src/elpa_qr/: elpa_pdgeqrf.f90  elpa_pdlarfb.f90  elpa_qrkernels.f90  qr_utils.f90
ELPA_development_version_qr/test/: read_real.f90  read_real_gen.F90  test_real.F90  test_real2.F90  test_real_gen.F90
build_test_scripts/: build_step.sh  configure_step.sh  generate_gitlab_ci_tests.py  run_ci_tests.sh  test_step.sh
cholesky/: mod_elpa_cholesky.F90
ci_test_scripts/: .ci-env-vars  build_step.sh  ci_coverage_summary  configure_step.sh  drive_layouts.sh  drive_nvhpcsdk.sh  generate_gitlab_ci_tests.py  no_lsan_for_mpi.supp  run_ci_tests.sh  run_ci_tests_nccl_very_large.sh  run_ci_tests_openmpi.sh  run_ci_tests_openmpi_large.sh  run_ci_tests_openmpi_very_large.sh  run_distcheck_tests.sh  run_project_tests.sh  run_raven_1node_sycl_on_cpu.sh  test_step.sh
documentation/: INSTALL.md  PERFORMANCE_TUNING.md  SWITCHING_TO_NEW_INTERFACE.md  USERS_GUIDE.md  USERS_GUIDE_DEPRECATED_LEGACY_API.md
elpa/: elpa.h  elpa_build_config.h.in  elpa_configured_options.h.in  elpa_constants.h  elpa_constants.h.in  elpa_explicit_name.c  elpa_explicit_name.h  elpa_generic.h  elpa_legacy.h  (+4 more)
src/shipped_srcs/NVIDIA_A100_kernel/hh_test/: .gitignore  CMakeLists.txt  LICENSE  README.md
src/shipped_srcs/NVIDIA_A100_kernel/hh_test/src/: compute_hh.cu  compute_hh_wrapper.f90  cuda_c_interface.cu  cuda_f_interface.f90  hh_test.f90
src/shipped_srcs/ONECCL_TESTS/: CMakeLists.txt  GPU  ccl-test2.cpp  elpa-oneccl-wrapper.h  helpers  oneccl_test.F90  oneccl_test_main.F90  syclCommon.cpp  syclCommon.hpp
src/shipped_srcs/SYCL_KERNEL/: .gitignore  CMakeLists.txt
src/shipped_srcs/SYCL_KERNEL/src/: compute_hh.cpp  compute_hh.cpp.bak  compute_hh_wrapper.f90  ev_tridi_band_sycl_gpu_real.cpp  hh_functions.f90  hh_test.f90  hh_test_complex.f90  syclCommon.cpp  sycl_c_interface.cpp  sycl_f_interface.f90  tmp.cpp
src/shipped_srcs/SYCL_KERNEL/src/cuda/: compute_hh_cuda.cu  compute_hh_cuda_complex.cu  compute_hh_cuda_complex_wrapper.cu  compute_hh_wrapper_cuda.f90  cuda_c_interface.cu  cuda_f_interface.f90
src/shipped_srcs/SYCL_KERNEL/src/rocm/: compute_hh_kernel_complex.hpp  compute_hh_kernel_real.hpp  compute_hh_kernel_wrapper.hip  compute_hh_wrapper_rocm.f90  config-f90.h  rocm_c_interface.hip  rocm_f_interface.f90
test_project/: .gitignore  Makefile.am  autogen.sh  configure.ac
test_project/m4/: ax_prog_fc_mpi.m4
test_project/src/: .test_real.F90.swp  test_real.F90
test_project/src2/: baz.F90
test_project_1stage/: Makefile.am  configure.ac
test_project_1stage/fdep/: fortran_dependencies.m4
test_project_1stage/src/: test_real.F90
test_project_2stage_legacy_api/: Makefile.am  configure.ac
test_project_2stage_legacy_api/src/: test_real2.F90
test_project_C/: Makefile.am  configure.ac
test_project_C/src/: test_blacs_infrastructure.F90  test_real.c
(+1603 files in other folders)
